--- a/doc/Hardware/stm32/Panel.ioc
+++ b/doc/Hardware/stm32/Panel.ioc
@@ -38,45 +38,46 @@ Mcu.Pin28=PB14
 Mcu.Pin29=PB15
 Mcu.Pin3=PC15/OSC32_OUT
 Mcu.Pin30=PD8
-Mcu.Pin31=PD10
-Mcu.Pin32=PD14
-Mcu.Pin33=PD15
-Mcu.Pin34=PC6
-Mcu.Pin35=PC7
-Mcu.Pin36=PC8
-Mcu.Pin37=PC9
-Mcu.Pin38=PA8
-Mcu.Pin39=PA9
+Mcu.Pin31=PD9
+Mcu.Pin32=PD10
+Mcu.Pin33=PD14
+Mcu.Pin34=PD15
+Mcu.Pin35=PC6
+Mcu.Pin36=PC7
+Mcu.Pin37=PC8
+Mcu.Pin38=PC9
+Mcu.Pin39=PA8
 Mcu.Pin4=PC0
-Mcu.Pin40=PA11
-Mcu.Pin41=PA13
-Mcu.Pin42=PA14
-Mcu.Pin43=PA15
-Mcu.Pin44=PC10
-Mcu.Pin45=PC11
-Mcu.Pin46=PC12
-Mcu.Pin47=PD0
-Mcu.Pin48=PD1
-Mcu.Pin49=PD2
+Mcu.Pin40=PA9
+Mcu.Pin41=PA11
+Mcu.Pin42=PA13
+Mcu.Pin43=PA14
+Mcu.Pin44=PA15
+Mcu.Pin45=PC10
+Mcu.Pin46=PC11
+Mcu.Pin47=PC12
+Mcu.Pin48=PD0
+Mcu.Pin49=PD1
 Mcu.Pin5=PC1
-Mcu.Pin50=PD3
-Mcu.Pin51=PD4
-Mcu.Pin52=PD5
-Mcu.Pin53=PD6
-Mcu.Pin54=PD7
-Mcu.Pin55=PB3
-Mcu.Pin56=PB4
-Mcu.Pin57=PB5
-Mcu.Pin58=PB6
-Mcu.Pin59=PB7
+Mcu.Pin50=PD2
+Mcu.Pin51=PD3
+Mcu.Pin52=PD4
+Mcu.Pin53=PD5
+Mcu.Pin54=PD6
+Mcu.Pin55=PD7
+Mcu.Pin56=PB3
+Mcu.Pin57=PB4
+Mcu.Pin58=PB5
+Mcu.Pin59=PB6
 Mcu.Pin6=PC2
-Mcu.Pin60=PB8
-Mcu.Pin61=PB9
-Mcu.Pin62=VP_SYS_VS_Systick
+Mcu.Pin60=PB7
+Mcu.Pin61=PB8
+Mcu.Pin62=PB9
+Mcu.Pin63=VP_SYS_VS_Systick
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0/WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=63
+Mcu.PinsNb=64
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F479VITx
@@ -237,6 +238,10 @@ PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=CS0
 PD8.Locked=true
 PD8.Signal=GPIO_Input
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=DISP_POWER_ON
+PD9.Locked=true
+PD9.Signal=GPIO_Output
 PE10.Mode=8b-da1
 PE10.Signal=FMC_DA7
 PE11.Mode=RGB666
@@ -274,7 +279,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
