--- a/doc/Hardware/stm32/Panel.ioc
+++ b/doc/Hardware/stm32/Panel.ioc
@@ -293,27 +293,48 @@ ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DAC_Init-DAC-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true
-RCC.CortexFreq_Value=16000000
+RCC.AHBFreq_Value=180000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=45000000
+RCC.APB1TimFreq_Value=90000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=90000000
+RCC.APB2TimFreq_Value=180000000
+RCC.CortexFreq_Value=180000000
 RCC.DSIFreq_Value=62500000
 RCC.DSITXEscFreq_Value=15625000
+RCC.EthernetFreq_Value=180000000
+RCC.FCLKCortexFreq_Value=180000000
 RCC.FamilyName=M
-RCC.IPParameters=CortexFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,FamilyName,LCDTFTFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-RCC.LCDTFTFreq_Value=48000000
-RCC.PLLCLKFreq_Value=96000000
+RCC.HCLKFreq_Value=180000000
+RCC.I2SFreq_Value=96000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.LCDTFTFreq_Value=25000000
+RCC.MCO2PinFreq_Value=180000000
+RCC.PLLCLKFreq_Value=180000000
 RCC.PLLDSIVCOFreq_Value=1000000000
 RCC.PLLI2SQCLKFreq_Value=48000000
 RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLRCLKFreq_Value=96000000
-RCC.PLLSAIPCLKFreq_Value=96000000
-RCC.PLLSAIQCLKFreq_Value=48000000
-RCC.PLLSAIRCLKFreq_Value=96000000
+RCC.PLLN=360
+RCC.PLLQCLKFreq_Value=90000000
+RCC.PLLRCLKFreq_Value=180000000
+RCC.PLLRFreq_Value=180000000
+RCC.PLLSAIN=100
+RCC.PLLSAIPCLKFreq_Value=50000000
+RCC.PLLSAIQCLKFreq_Value=25000000
+RCC.PLLSAIRCLKFreq_Value=50000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
+RCC.SAIAFreq_Value=25000000
+RCC.SAIBFreq_Value=25000000
+RCC.SDIOFreq_Value=90000000
+RCC.SYSCLKFreq_VALUE=180000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USBFreq_Value=90000000
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
-RCC.VCOSAIOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=360000000
+RCC.VCOSAIOutputFreq_Value=100000000
 SH.COMP_DAC2_group.0=DAC_OUT2,DAC_OUT2
 SH.COMP_DAC2_group.ConfNb=1
 SH.FMC_NL.0=FMC_NL,AddressValid1
