--- a/doc/РД/Распиновка/Panel479.ioc
+++ b/doc/РД/Распиновка/Panel479.ioc
@@ -285,8 +285,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Panel.ioc
-ProjectManager.ProjectName=Panel
+ProjectManager.ProjectFileName=Panel479.ioc
+ProjectManager.ProjectName=Panel479
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
