--- a/doc/РД/Распиновка/Panel479.ioc
+++ b/doc/РД/Распиновка/Panel479.ioc
@@ -34,50 +34,52 @@ Mcu.Pin24=PE14
 Mcu.Pin25=PE15
 Mcu.Pin26=PB10
 Mcu.Pin27=PB11
-Mcu.Pin28=PB14
-Mcu.Pin29=PB15
+Mcu.Pin28=PB12
+Mcu.Pin29=PB13
 Mcu.Pin3=PC15/OSC32_OUT
-Mcu.Pin30=PD8
-Mcu.Pin31=PD9
-Mcu.Pin32=PD10
-Mcu.Pin33=PD14
-Mcu.Pin34=PD15
-Mcu.Pin35=PC6
-Mcu.Pin36=PC7
-Mcu.Pin37=PC8
-Mcu.Pin38=PC9
-Mcu.Pin39=PA8
+Mcu.Pin30=PB14
+Mcu.Pin31=PB15
+Mcu.Pin32=PD8
+Mcu.Pin33=PD9
+Mcu.Pin34=PD10
+Mcu.Pin35=PD14
+Mcu.Pin36=PD15
+Mcu.Pin37=PC6
+Mcu.Pin38=PC7
+Mcu.Pin39=PC8
 Mcu.Pin4=PC0
-Mcu.Pin40=PA9
-Mcu.Pin41=PA11
-Mcu.Pin42=PA13
-Mcu.Pin43=PA14
-Mcu.Pin44=PA15
-Mcu.Pin45=PC10
-Mcu.Pin46=PC11
-Mcu.Pin47=PC12
-Mcu.Pin48=PD0
-Mcu.Pin49=PD1
+Mcu.Pin40=PC9
+Mcu.Pin41=PA8
+Mcu.Pin42=PA9
+Mcu.Pin43=PA11
+Mcu.Pin44=PA13
+Mcu.Pin45=PA14
+Mcu.Pin46=PA15
+Mcu.Pin47=PC10
+Mcu.Pin48=PC11
+Mcu.Pin49=PC12
 Mcu.Pin5=PC1
-Mcu.Pin50=PD2
-Mcu.Pin51=PD3
-Mcu.Pin52=PD4
-Mcu.Pin53=PD5
-Mcu.Pin54=PD6
-Mcu.Pin55=PD7
-Mcu.Pin56=PB3
-Mcu.Pin57=PB4
-Mcu.Pin58=PB5
-Mcu.Pin59=PB6
+Mcu.Pin50=PD0
+Mcu.Pin51=PD1
+Mcu.Pin52=PD2
+Mcu.Pin53=PD3
+Mcu.Pin54=PD4
+Mcu.Pin55=PD5
+Mcu.Pin56=PD6
+Mcu.Pin57=PD7
+Mcu.Pin58=PB3
+Mcu.Pin59=PB4
 Mcu.Pin6=PC2
-Mcu.Pin60=PB7
-Mcu.Pin61=PB8
-Mcu.Pin62=PB9
-Mcu.Pin63=VP_SYS_VS_Systick
+Mcu.Pin60=PB5
+Mcu.Pin61=PB6
+Mcu.Pin62=PB7
+Mcu.Pin63=PB8
+Mcu.Pin64=PB9
+Mcu.Pin65=VP_SYS_VS_Systick
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0/WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=64
+Mcu.PinsNb=66
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F479VITx
@@ -135,6 +137,14 @@ PB10.Mode=RGB666
 PB10.Signal=LTDC_G4
 PB11.Mode=RGB666
 PB11.Signal=LTDC_G5
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=SEL_0_1
+PB12.Locked=true
+PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=CS1_1
+PB13.Locked=true
+PB13.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=SEL_0
 PB14.Locked=true
