--- a/doc/РД/Распиновка/Kornet437_144.ioc
+++ b/doc/РД/Распиновка/Kornet437_144.ioc
@@ -11,6 +11,9 @@ ADC3.IPParameters=Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConv
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-8\#ChannelRegularConversion=1
 ADC3.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F437ZIT6
@@ -126,19 +129,19 @@ Mcu.PinsNb=92
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F437ZITx
-MxCube.Version=6.5.0
-MxDb.Version=DB.6.0.50
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+MxCube.Version=6.8.0
+MxDb.Version=DB.6.0.80
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=A A0S
 PA10.Locked=true
@@ -382,7 +385,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F437ZITx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -395,6 +398,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Kornet437_144.ioc
 ProjectManager.ProjectName=Kornet437_144
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
